dashboard overflow fix

--- a/public/assets/sass/custom.scss
+++ b/public/assets/sass/custom.scss
@@ -1795,6 +1795,7 @@ section.dashboardPage {
                     max-height: 0;
                     visibility: hidden;
                     opacity: 0;
+                    overflow: hidden;
                 }
             }
         }
